--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
                         <div class="spinner-border" role="status"><span class="sr-only"></span></div>
                         <div style="color: red;font-size: 14px;" id="sms_message"></div>
                     </div>
-                    <div id="featureList" style=" display: block; ">
+                    <div id="featureList" style=" display: none; ">
                         <div class="container">
                             <div class="row">
                                 <div class="col-9 list-group-item list-group-item-action" value="copy_order_address" style="cursor: pointer">
