--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
         <div style="/* display: none; */">
             <div>
                 <img style="width: 34px;display: inline-block;vertical-align: middle;" src="images/favicon.png"/>
-                <span style="display: inline-block;vertical-align: middle;">辅助助手 <span class="badge badge-light" style="font-weight: bolder">V1.2.1</span></span>
+                <span style="display: inline-block;vertical-align: middle;">辅助助手 <span class="badge badge-light" style="font-weight: bolder">V1.2.3</span></span>
             </div>
         </div>
         <div style="/* display: none; */">
@@ -29,12 +29,12 @@
                                     <a href="#" style="color: #495057;text-decoration: none;">复制订单信息</a>
                                 </div>
                                 <div class="col-3 list-group-item list-group-item-action" id="setting_order_table" data-toggle="setting_order_table" value="setting_order_table" style="cursor: pointer;border-top-width: 1px;">
-                                    <a href="#" style="color: #495057;display: block;text-align: center;">
-                                        <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-gear" fill="currentColor" id="gear">
-                                            <path fill-rule="evenodd"
-                                                    d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 014.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 01-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 011.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 012.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 012.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 011.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 01-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 018.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 001.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 00.52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 00-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 00-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 00-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 00-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 00.52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 001.255-.52l.094-.319z"></path>
+                                    <a href="#" style="color: #495057;display: block;text-align: center;margin-top: -10px;">
+                                        <svg width="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-gear" fill="currentColor" id="gear">
+                                            <path fill-rule="evenodd" d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 014.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 01-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 011.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 012.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 012.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 011.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 01-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 018.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 001.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 00.52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 00-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 00-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 00-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 00-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 00.52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 001.255-.52l.094-.319z"></path>
                                             <path fill-rule="evenodd" d="M8 5.754a2.246 2.246 0 100 4.492 2.246 2.246 0 000-4.492zM4.754 8a3.246 3.246 0 116.492 0 3.246 3.246 0 01-6.492 0z"></path>
                                         </svg>
+                                        <div style="position: absolute;top: 20px;margin-left: -5px;">排序</div>
                                     </a>
                                 </div>
                             </div>
@@ -42,8 +42,23 @@
                         <div>
                             <a href="#" value="order_image_loading_Process" class="list-group-item list-group-item-action">识别水军订单</a>
                         </div>
-                        <div>
-                            <a href="#" value="video_image_batch_download" class="list-group-item list-group-item-action">批量图片下载</a>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-9 list-group-item list-group-item-action" value="video_image_batch_download" style="cursor: pointer">
+                                    <a href="#" style="color: #495057;text-decoration: none;">批量图片下载</a>
+                                </div>
+                                <div class="col-3 list-group-item list-group-item-action" id="setting_plugin_manage" data-toggle="setting_plugin_manage" value="setting_plugin_manage" style="cursor: pointer;border-top-width: 1px;">
+                                    <a href="#" style="color: #495057;display: block;text-align: center;margin-top: -10px;">
+                                        <svg width="15" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-gear" fill="currentColor" id="gear">
+                                            <path fill-rule="evenodd" d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 014.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 01-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 011.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 012.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 012.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 011.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 01-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 018.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 001.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 00.52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 00-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 00-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 00-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 00-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 00.52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 001.255-.52l.094-.319z"></path>
+                                            <path fill-rule="evenodd" d="M8 5.754a2.246 2.246 0 100 4.492 2.246 2.246 0 000-4.492zM4.754 8a3.246 3.246 0 116.492 0 3.246 3.246 0 01-6.492 0z"></path>
+                                        </svg>
+                                        <div style="position: absolute;top: 20px;margin-left: -5px;">插件</div>
+                                    </a>
+                                </div>
+                            </div>
+
+
                         </div>
                         <div>
                             <a href="#" value="prompt" class="list-group-item list-group-item-action">Page not found 404</a>
@@ -87,7 +102,7 @@
                     </div>
                     <div class="drawer-body">
                         <div class="row" style="padding: 10px;">
-                            <div class="col-9">订单表头排序</div>
+                            <div class="col-9">订单复制表数据排序</div>
                             <div class="col-3" style="text-align: right;">
                                 <button value="add_table_handle" style="padding: 0px 8px;margin-top: -4px" data-toggle="setting_order_table_all" type="button" class="btn btn-outline-secondary btn-sm">
                                     <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-list-ol" fill="currentColor" id="list-ol">
