--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
     <div style="padding: 15px;padding-bottom: 0"><!--background-color: #e9ecef;-->
         <div style="/* display: none; */">
             <div>
-                <img style="width: 34px;display: inline-block;vertical-align: middle;" src="images/favicon.png"/>
+                <img style="width: 34px;display: inline-block;vertical-align: middle;" src="images/toptile.png"/>
                 <span style="display: inline-block;vertical-align: middle;">辅助助手 <span class="badge badge-light" style="font-weight: bolder">V1.4</span></span>
             </div>
         </div>
@@ -86,9 +86,9 @@
                 </div>
                 <div class="container" style="margin-top: 5px;">
                     <div class="row">
-                        <div class="card col-8" style="padding-right: 0px;padding-left: 0px">
-                            <div class="card-body" style="padding: 0.25rem;">
-                                <button value="open_back" type="button" class="btn btn-outline-primary btn-sm btn-block">
+                        <div class="col-8" style="padding-right: 0px;padding-left: 0px">
+                            <div class="card-body" style="padding: 0;margin-right: 5px;">
+                                <button value="open_back" type="button" style="border-color: rgba(0, 0, 0, .125);font-size: 12px;" class="btn btn-outline-dark btn-sm btn-block">
                                     <div>
                                         <svg style="width: 21px;display: inline-block;vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-box-arrow-in-down-left" fill="currentColor" id="box-arrow-in-down-left">
                                             <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 00-.5-.5H2.5A1.5 1.5 0 001 3.5v10A1.5 1.5 0 002.5 15h10a1.5 1.5 0 001.5-1.5V6.864a.5.5 0 00-1 0V13.5a.5.5 0 01-.5.5h-10a.5.5 0 01-.5-.5v-10a.5.5 0 01.5-.5h6.636a.5.5 0 00.5-.5z"></path>
@@ -97,12 +97,11 @@
                                     </div>
                                     <span style="display: inline-block;vertical-align: middle;">打开后台</span>
                                 </button>
-                                <button value="open_yangkeduo_pdd" type="button" class="btn btn-outline-primary btn-sm btn-block">
+                            </div>
+                            <div class="card-body" style="padding: 0;margin-right: 5px;margin-top: 5px;">
+                                <button value="open_yangkeduo_pdd" style="border-color: rgba(0, 0, 0, .125);font-size: 12px;" type="button" class="btn btn-outline-dark btn-sm btn-block">
                                     <span style="display: inline-block;vertical-align: middle;">打开手机商城</span>
                                 </button>
-                                <!--                                <button value="stop_opera" type="button" class="btn btn-outline-primary btn-sm btn-block">-->
-                                <!--                                    停止当前操作-->
-                                <!--                                </button>-->
                             </div>
                         </div>
                         <div class="card col-4" style="padding: 0 0.25rem;">
@@ -197,6 +196,20 @@
         white-space: nowrap;
         position: absolute;
         margin-left: 5px;
+    }
+
+    .btn-outline-dark:hover {
+        color: #495057;
+        background-color: #f8f9fa;
+        border-color: rgba(0, 0, 0, .125)
+    }
+    .btn-outline-dark:not(:disabled):not(.disabled).active, .btn-outline-dark:not(:disabled):not(.disabled):active, .show>.btn-outline-dark.dropdown-toggle {
+        color: #495057;
+        background-color: #f8f9fa;
+        border-color: rgba(0, 0, 0, .125)
+    }
+    .btn-outline-dark.focus, .btn-outline-dark:focus {
+        box-shadow: 0 0 0 0 rgba(52,58,64,.5);
     }
 </style>
 </body>
